# public_api_server

./: .gitignore  README.md  pyproject.toml  start.sh
Florence2_server/: main.py  pyproject.toml
Florence2_server/app/: api.py
Florence2_server/app/middleware/: auth.py
Florence2_server/app/routers/: clip_router.py  florence_router.py  m3_router.py  paddleocr_router.py  template.py
Florence2_server/app/services/: clip_service.py  m3_service.py  paddleocr_service.py
Florence2_server/docker/: Dockerfile  docker-compose.yml
app/: api.py
app/routers/: clip_router.py  m3_router.py
app/services/: paddleocr_service.py
docker/: Dockerfile
embedding_server/: pyproject.toml  requirements.txt
embedding_server/app/: api.py
embedding_server/app/routers/: florence_router.py  insightface_router.py  m3_router.py  paddleocr_router.py
embedding_server/app/services/: insightface_service.py
embedding_server/docker/: Dockerfile  docker-compose.yml
enhance_face_server/: pyproject.toml
enhance_face_server/app/: api.py
enhance_face_server/app/routers/: secure.py
enhance_face_server/app/services/: swap_face_service.py
enhance_face_server/docker/: Dockerfile  docker-compose.yml
swap_face_server/: pyproject.toml  readme.md
swap_face_server/app/: api.py
swap_face_server/app/routers/: swap_face_router.py
swap_face_server/app/services/: swap_face_service.py
swap_face_server/docker/: docker-compose.yml
