[tool.poetry]
name = "public_api_server"
version = "0.1.0"
description = "public api server"
authors = ["Walter Jin <jinshuhaicc@gmail.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
#fastapi = "^0.88.0"
#pydantic = "^1.10.2"
#uvicorn = "^0.20.0"
#python-decouple = "^3.6"
#python-multipart = "^0.0.5"
#pyflakes = "^3.0.1"
fastapi = "^0.115.5"
pydantic = "^2.9.2"
uvicorn = "^0.32.0"
python-decouple = "^3.8"
python-multipart = "^0.0.17"
pyflakes = "^3.2.0"
flagembedding = "^1.3.2"
pillow = "^11.0.0"
clip = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
