[tool.poetry]
name = "enhance_face_server"
version = "0.1.0"
description = ""
authors = ["Walter <jinshuhaicc@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "1.23.5"
opencv-python = "4.8.1.78"
onnx = "^1.17.0"
insightface = "^0.7.3"
pillow = "^11.0.0"
torch = "2.0.1"
torchvision = "0.15.2"
onnxruntime-silicon = { version = "^1.16.3", markers = "sys_platform == 'darwin'" }
#onnxruntime = { version = "^1.16.3", markers = "sys_platform != 'darwin'" }
#onnxruntime = { version = "^1.16.3", markers = "sys_platform == 'win32'" }
onnxruntime = { version = "^1.20.1", markers = "sys_platform == 'win32'" }
onnxruntime-gpu = { version = "^1.16.3", markers = "sys_platform == 'linux'" }
protobuf = "4.23.2"
tqdm = "4.66.4"
gfpgan = "1.3.8"
fastapi = "^0.115.6"
pydantic = "^2.10.4"
uvicorn = "^0.34.0"
python-decouple = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
